# ModulusVascularFlow

./: LICENSE  README.md  pyproject.toml  setup.py
modulusDL/: __init__.py
stenosis2dsimple/: stenosis2dsimplecase_0hb.py  stenosis2dsimplecase_low_0hb.py  stenosis2dsimplecase_plus_0hb.py  stenosis2dsimplecase_plus_deqn_0hb.py  stenosis2dsimplemix_0hb.py  stenosis2dsimplemix_plus_0hb.py  stenosis2dsimplemix_plus_0io_0hb.py  stenosis2dsimplemix_plus_deqn_0hb.py  stenosis2dsimplemode_0hb.py  stenosis2dsimplemode_plus_0hb.py  stenosis2dsimplemode_plus_deqn_0hb.py  stenosis2dsimplesingle1024_0io.py  stenosis2dsimplesingle256_io.py  stenosis2dsimplesingle384_0io.py  stenosis2dsimplesingle512_0io.py
stenosis3d/: cylinder_3d_flexi_single.py  cylinder_3d_flexi_single_GE.py  cylinder_3d_flexi_single_GE_F1hbQ.py  cylinder_3d_flexi_single_GE_FB1wQ.py  cylinder_3d_flexi_single_GE_FinB1.py  cylinder_3d_flexi_single_GE_hbdwQ.py  cylinder_3d_flexi_single_GE_hbdwQ_asym.py  cylinder_3d_flexi_single_GE_hbiVQ.py  cylinder_3d_flexi_single_GE_hbiVQ_FB1.py  cylinder_3d_flexi_single_GE_hbiVQ_asym.py  cylinder_3d_flexi_single_GE_hbiVQ_lrs.py  cylinder_3d_flexi_single_GE_hbiVQ_lrt.py  cylinder_3d_flexi_single_GE_hbiVQ_lrt_asym.py  cylinder_3d_flexi_single_GE_hbiVQ_slowdecay.py  cylinder_3d_flexi_single_GE_hbiVQo_lrt.py  cylinder_3d_flexi_single_GE_hbiVQo_lrt_asym.py  cylinder_3d_flexi_single_GE_hbiVQo_lrt_symi.py  cylinder_3d_flexi_single_GE_hbiVQo_lrt_symr.py  cylinder_3d_flexi_single_GE_iVwQQ.py  cylinder_3d_flexi_single_GE_iniVQ.py  cylinder_3d_flexi_single_GE_initv.py  (+18 more)
(+49 files in other folders)
